Fixed hidden scrollbar screwing over youtube's video size calculation

--- a/src/styles/youtube-ambilight.scss
+++ b/src/styles/youtube-ambilight.scss
@@ -112,7 +112,7 @@ html[data-ambilight-enabled="true"] {
     &[data-ambilight-immersive-mode="true"] {
       scrollbar-width: none !important;
       body::-webkit-scrollbar {
-        width: 0 !important;
+        display: none !important;
       }
     }
   }
